setup/nginx_dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: nginx-ingress
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: dashboard
  selector:
    app: nginx-ingress
